# AI_Teacher

./: .dockerignore  .gitignore  .gitmessage.txt  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
.github/workflows/: CD.yml  CI.yml
generate_data/: student.py  studygroup.py  teacher.py
infra/: db-compose.yaml  nginx.conf
migrations/: env.py
migrations/versions/: 2024_11_12_1519-5a72f2c8b17c_add_test_user_table.py  2024_11_13_1614-87c8e0871b16_create_user_table.py  2024_11_13_1628-9b68fdec26b4_modified_user_table.py  2024_11_14_1838-ee4cc482d6c6_initialize.py  2024_11_15_1528-d85ae04a6455_post_table.py  2024_11_17_1522-f6449adecd3b_image_and_post_image.py  2024_11_17_1805-eeb1ef42e492_image_table.py  2024_11_18_1028-8649d6ba05a6_comment_model.py  2024_11_23_0126-b52dd26cfa21_initialize_table.py  2024_11_23_0250-715b09667efd_initialize_table.py  2024_11_23_1533-ef31195d03ca_initialize_table.py  2024_12_02_2137-5f6307012e03_init.py  2024_12_02_2206-b809b1bfca87_init_1.py
scripts/: check.bat  check.sh
src/: main.py
src/app/common/: factory.py
src/app/common/models/: image.py  tag.py
src/app/common/utils/: ai_chat.py  check_script.py  consts.py  dependency.py  image.py  kafka_utils.py  openai.py  redis.py  redis_utils.py  security.py  send_email.py  verify_password.py  websocket_manager.py
src/app/router/: __init__.py
src/app/router/v1/: auth.py  chat.py  comment.py  post.py  teacher.py  user.py  websocket.py
src/app/v1/auth/: __init__.py
src/app/v1/auth/repository/: auth_repository.py  oauth_repository.py
src/app/v1/auth/schema/: requestDto.py  responseDto.py
src/app/v1/auth/service/: auth_service.py  kakao_service.py  oauth_service.py
src/app/v1/chat/entity/: chat_participant.py  message.py  participant.py  room.py
src/app/v1/chat/repository/: chat_repository.py  room_repository.py
src/app/v1/chat/schema/: room_request.py  (+2 more)
src/config/database/: __init__.py  database_models.py  kafka.py  mongo.py  postgresql.py  redis.py
src/v1/user/: root.py
tests/auth/: test_redis.py
tests/chats/: db_engine.py  db_test.py  test_chat_model.py
tests/comments/: test_comment_model.py
tests/posts/: test_post_model.py
tests/users/: test_async_user_model.py  test_user_model.py
(+29 files in other folders)
