[tool.poetry]
name = "oz-project-03-be"
version = "0.1.0"
description = ""
authors = ["skwwnl <skwwnl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
fastapi = {extras = ["standard"], version = "0.115.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
