[tool.poetry]
name = "oz-project-03-be"
version = "0.1.0"
description = ""
authors = ["skwwnl <skwwnl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
fastapi = "0.115.4"
uvicorn = "0.32.0"
alembic = "1.14.0"
sqlalchemy = {extras = ["asyncio"], version = "2.0.36"}
asyncpg = "0.30.0"
python-dotenv = "1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
coverage = "^7.6.4"
pytest = "^8.3.3"

[tool.black]
line-length = 150

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
